[tool.poetry]
name = "notebookquery"
version = "0.1.1"
description = "SQL integration and table display for ipython notebooks"
authors = ["Robert Lechte <robert.lechte@dpc.vic.gov.au>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.8"
results = "*"
nouns = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
flake8 = "*"
pytest-cov = "*"
jupyterlab = "*"
black = ">=19.10b0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
